[gd_scene load_steps=15 format=2]

[ext_resource path="res://components_lib/linear_z_conveyor/materials/black.tres" type="Material" id=1]
[ext_resource path="res://components_lib/linear_z_conveyor/materials/mat_1.material" type="Material" id=2]
[ext_resource path="res://components_lib/linear_z_conveyor/materials/blue.tres" type="Material" id=3]
[ext_resource path="res://components_lib/linear_z_conveyor/scripts/linear_Z_conveyor.gd" type="Script" id=4]
[ext_resource path="res://components_lib/linear_z_conveyor/scenes/Leg.tscn" type="PackedScene" id=6]
[ext_resource path="res://components_lib/linear_z_conveyor/meshes/conveyor.mesh" type="ArrayMesh" id=7]
[ext_resource path="res://components_lib/linear_z_conveyor/meshes/knife_transition.mesh" type="ArrayMesh" id=8]
[ext_resource path="res://components_lib/linear_z_conveyor/meshes/engine_right.mesh" type="ArrayMesh" id=9]
[ext_resource path="res://components_lib/linear_z_conveyor/meshes/engine_left.mesh" type="ArrayMesh" id=10]
[ext_resource path="res://components_lib/linear_z_conveyor/meshes/conveyor_belt.mesh" type="ArrayMesh" id=11]

[sub_resource type="Curve3D" id=1]
_data = {
"delay": PoolRealArray(  ),
"orientation": PoolVector3Array(  ),
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  ),
"zoom": PoolVector2Array(  )
}

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1000, 100, 30 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1000, 100, 35 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 26.729, 54.777, 150 )

[node name="Z conveyor" type="RcsPathConveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40995, 0 )
curve = SubResource( 1 )
grab_all = null
drop_all = null
script = ExtResource( 4 )
height_conveyor_MM = 1113.6

[node name="Top" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -818.807, 2082.41, 0 )

[node name="conveyor" type="MeshInstance" parent="Top"]
transform = Transform( -1.4245, 1.50996e-07, 1.88745e-07, 2.15094e-07, 1, -1.09279e-07, 2.15094e-07, 8.74228e-08, 1.25, -750, 0, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 3 )

[node name="knife_transition_1" type="MeshInstance" parent="Top/conveyor"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -6.70044, 7.84424, 0 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 2 )

[node name="knife_transition_2" type="MeshInstance" parent="Top/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4603, 4.32465, 2.697 )
visible = false
mesh = ExtResource( 8 )
material/0 = ExtResource( 2 )

[node name="conveyor_belt" type="MeshInstance" parent="Top/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.68164, 0 )
mesh = ExtResource( 11 )
material/0 = ExtResource( 2 )

[node name="Engine" type="Spatial" parent="Top"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1450, 0, -9.657 )

[node name="engine_right" type="MeshInstance" parent="Top/Engine"]
transform = Transform( 0, -1, -4.0506e-17, -1, 0, -4.0506e-17, 4.0506e-17, 4.0506e-17, -1, 32, -156, -271.158 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 1 )

[node name="engine_left" type="MeshInstance" parent="Top/Engine"]
transform = Transform( 0, 0.999986, 0.00542794, -1, 0, 0, 0, -0.00542794, 0.999986, 32, -156, 291.158 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 1 )

[node name="Board" type="Spatial" parent="Top"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.657 )

[node name="Board_right" type="MeshInstance" parent="Top/Board"]
transform = Transform( -1.4245, 0, 0, 0, 1, -1.50996e-07, 0, 1.50996e-07, 1, 0.014245, 50, -238.095 )

[node name="board_right" type="MeshInstance" parent="Top/Board/Board_right"]
transform = Transform( 1, 0, -1.50996e-07, 0, -1, 0, 1.50996e-07, 0, 1, 523.119, 17, 27.346 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Board_left" type="MeshInstance" parent="Top/Board"]
transform = Transform( -1.4245, 0, 0, 0, 1, -1.50996e-07, 0, 1.50996e-07, 1, 0.0999756, 50, 250 )

[node name="board_left" type="MeshInstance" parent="Top/Board/Board_left"]
transform = Transform( -1, 0, -3.89414e-07, 0, 1, 0, 3.89414e-07, 0, -1, 521.79, 17.812, -12.79 )
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="Middle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40.917, 0, 0 )

[node name="conveyor_s" type="Spatial" parent="Middle"]

[node name="title" type="RcsJoint" parent="Middle/conveyor_s"]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0, 1113.6, 0 )
JointValue = 0.785398
rotation_axis = Vector3( 0, 0, -1 )
base_translation = Vector3( 0, 1113.6, 0 )

[node name="conv" type="Spatial" parent="Middle/conveyor_s/title"]
redirect_selection = true

[node name="conveyor" type="MeshInstance" parent="Middle/conveyor_s/title/conv"]
transform = Transform( -1.30114, 1.50996e-07, -1.88745e-07, 1.96467e-07, 1, 3.37386e-18, 1.96467e-07, -2.2797e-14, -1.25, -685.05, 0, 0 )
redirect_selection = true
mesh = ExtResource( 7 )
material/0 = ExtResource( 3 )

[node name="knife_transition_1" type="MeshInstance" parent="Middle/conveyor_s/title/conv/conveyor"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -6.70044, 7.84424, 0 )
redirect_selection = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 2 )

[node name="knife_transition_2" type="MeshInstance" parent="Middle/conveyor_s/title/conv/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4603, 4.32465, 2.697 )
redirect_selection = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 2 )

[node name="conveyor_belt" type="MeshInstance" parent="Middle/conveyor_s/title/conv/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.68164, 0 )
redirect_selection = true
mesh = ExtResource( 11 )
material/0 = ExtResource( 2 )

[node name="Engine" type="Spatial" parent="Middle/conveyor_s/title"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1320.1, 0, -9.657 )
redirect_selection = true

[node name="engine_right" type="MeshInstance" parent="Middle/conveyor_s/title/Engine"]
transform = Transform( 0, -1, -4.0506e-17, -1, 0, -4.0506e-17, 4.0506e-17, 4.0506e-17, -1, 32, -156, -223.789 )
visible = false
redirect_selection = true
mesh = ExtResource( 9 )
material/0 = ExtResource( 1 )

[node name="engine_left" type="MeshInstance" parent="Middle/conveyor_s/title/Engine"]
transform = Transform( 0, 0.999986, 0.00542794, -1, 0, 0, 0, -0.00542794, 0.999986, 32, -156, 243.789 )
visible = false
redirect_selection = true
mesh = ExtResource( 10 )
material/0 = ExtResource( 1 )

[node name="Board" type="Spatial" parent="Middle/conveyor_s/title"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40.8593, 0 )
redirect_selection = true

[node name="Board_right" type="MeshInstance" parent="Middle/conveyor_s/title/Board"]
transform = Transform( -1.30114, 0, 0, 0, -1, 0, 0, 0, -1, -0.0130114, 50, -238.095 )
redirect_selection = true

[node name="board_right" type="MeshInstance" parent="Middle/conveyor_s/title/Board/Board_right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 523.119, 17, -17.9017 )
redirect_selection = true
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Board_left" type="MeshInstance" parent="Middle/conveyor_s/title/Board"]
transform = Transform( -1.30114, 0, 0, 0, -1, 0, 0, 0, -1, 0, 50, 250 )
redirect_selection = true

[node name="board_left" type="MeshInstance" parent="Middle/conveyor_s/title/Board/Board_left"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 521.79, 17.812, 23.2834 )
redirect_selection = true
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="Lower" type="Spatial" parent="."]

[node name="conveyor" type="MeshInstance" parent="Lower"]
transform = Transform( 0.474834, 0, 0, 0, 1, 0, 0, 0, 1.25, 232.558, 1113.6, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 3 )

[node name="knife_transition_1" type="MeshInstance" parent="Lower/conveyor"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -6.70044, 7.84424, 0 )
visible = false
mesh = ExtResource( 8 )
material/0 = ExtResource( 2 )

[node name="knife_transition_2" type="MeshInstance" parent="Lower/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4603, 4.32465, 2.697 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 2 )

[node name="conveyor_belt" type="MeshInstance" parent="Lower/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.38321, 5.6817, 1.84228 )
mesh = ExtResource( 11 )
material/0 = ExtResource( 2 )

[node name="Board" type="Spatial" parent="Lower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.008, 1113.6, -9.657 )

[node name="Board_right" type="MeshInstance" parent="Lower/Board"]
transform = Transform( 0.474834, 0, 0, 0, 1, 0, 0, 0, 1, 0.00474834, 50, -238.095 )

[node name="board_right" type="MeshInstance" parent="Lower/Board/Board_right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 496, 17, 27.346 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Board_left" type="MeshInstance" parent="Lower/Board"]
transform = Transform( 0.474834, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 250 )

[node name="board_left" type="MeshInstance" parent="Lower/Board/Board_left"]
transform = Transform( -1, 0, -3.89414e-07, 0, 1, 0, 3.89414e-07, 0, -1, 496, 17.812, -12.79 )
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="Engine" type="Spatial" parent="Lower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44.5532, 711, -9.65702 )
visible = false

[node name="engine_right" type="MeshInstance" parent="Lower/Engine"]
transform = Transform( 0, -1, -4.0506e-17, -1, 0, -4.0506e-17, 4.0506e-17, 4.0506e-17, -1, 32, -156, -320.25 )
visible = false
mesh = ExtResource( 9 )
material/0 = ExtResource( 1 )

[node name="engine_left" type="MeshInstance" parent="Lower/Engine"]
transform = Transform( 0, 0.999986, 0.00542794, -1, 0, 0, 0, -0.00542794, 0.999986, 32, -156, 320.25 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 1 )

[node name="Legs_Generator_1" type="RcsGridPartGenerator" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 400, 0, -263.158 )
part_scene_path = "res://components_lib/linear_z_conveyor/scenes/Leg.tscn"
uuid = "02afc33a-a62a-4983-b160-70b92bc2f042"
row_step = Vector3( 803.682, 0, 0 )
rows = 4

[node name="Leg_1_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"

[node name="Leg_2_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 803.682, 0, 0 )

[node name="Leg_3_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1607.36, 0, 0 )

[node name="Leg_4_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2411.05, 0, 0 )

[node name="Legs_Generator_2" type="RcsGridPartGenerator" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 400, 0, 263.158 )
part_scene_path = "res://components_lib/linear_z_conveyor/scenes/Leg.tscn"
uuid = "02afc33a-a62a-4983-b160-70b92bc2f042"
row_step = Vector3( -803.682, 0, 0 )
rows = 4

[node name="Leg_1_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"

[node name="Leg_2_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -803.682, 0, 0 )

[node name="Leg_3_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1607.36, 0, 0 )

[node name="Leg_4_02afc33a-a62a-4983-b160-70b92bc2f046" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 6 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2411.05, 0, 0 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1890.08, 1423, 0 )

[node name="RcsAreaMonitor" type="RcsAreaMonitor" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.25, 430, 1181.6, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RcsAreaMonitor"]
visible = false
shape = SubResource( 4 )
